# Airflow

./: README.md
.github/workflows/: test.yml
src/: .env_prod  .env_test  .gitignore  app.py  iointerface.py  pyproject.toml
src/csv/: Book1.csv  Book1_dup.csv  TradeReqs.csv  TradeReqs_more.csv  jam_positions.csv  jam_positions_positive.csv  test_short_positive.csv
src/sql/: neg_checker.sql  short_strats.sql
src/test_cases/: test_contract_beyond_12m.py  test_contract_within_12m.py  test_neg_negative.py  test_neg_positive.py  test_short_with_positive.py  test_short_without_positive.py  test_with_dup.py  test_without_dup.py
